Mudando tipo da hora para time

--- a/application/views/scripts/sinistro/index.phtml
+++ b/application/views/scripts/sinistro/index.phtml
@@ -73,7 +73,7 @@
                                 <div class="col-lg-4">
                                     <label for="descricao" id="label">Hora</label><label  style="color:red" id="label">*</label>
                                     <div style="padding-bottom: 5px">
-                                        <input type="text" class="form-control" id="hora" name="hora" placeholder="Hora" >
+                                        <input type="time" class="form-control" id="hora" name="hora" placeholder="Hora" >
                                     </div>
                                     <div class="alert-lt alert-danger validaCusto"  align="center" style="display:none" role="alert">
                                         Campo obrigatório
