--- a/application/layouts/scripts/layout_vendedor.phtml
+++ b/application/layouts/scripts/layout_vendedor.phtml
@@ -20,6 +20,7 @@
         <link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/datedropper.css") ?> />
         <link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/my-style.css") ?> />
         <link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/funcionario.css") ?> />
+        <link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/venda.css") ?> />
         <link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/style.css") ?> />
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     </head>
@@ -42,8 +43,8 @@
                                 <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="<?= $this->baseUrl("funcionario") ?>">
-                                Funcionários
+                            <a class="nav-link" href="<?= $this->baseUrl("venda") ?>">
+                                Venda
                             </a>
                         </li>
                     </ul>
