Feito a view do Seguros.php com a visualização e os campos para cadastro

--- a/application/views/scripts/menuinicial/index.phtml
+++ b/application/views/scripts/menuinicial/index.phtml
@@ -2,21 +2,24 @@
 	<link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/forma-pagamento.css") ?> />
   <div class="row" >
     <div class="col-lg-2"></div>
-  <div class="col-lg-8">
-    <br>
-    <br>
- <div class="card mb-3" style="background-color:rgba(0,0,0,0.7);">
-    <div class="card-body"> 
-
-      <a href="../public/categoria-onibus" class="btn btn-block btn-primary">Gerenciar Tarifas de Categorias</a>
+    <div class="col-lg-8">
       <br>
-      <a href="../public/parada-onibus" class="btn btn-block btn-primary">Gerenciar paradas de onibus</a>
       <br>
-      <a href="../public/forma-pagamento" class="btn btn-block btn-primary">Gerenciar formas de pagamento</a>
-</div>
-</div>
-</div>
-    <div class="col-lg-2"></div>
+      <div class="card mb-3" style="background-color:rgba(0,0,0,0.7);">
+        <div class="card-body"> 
 
-</div>
-</div>
+          <a href="../public/seguros" class="btn btn-block btn-primary">Gerenciar Seguros</a>
+            <br>
+            <a href="../public/categoria-onibus" class="btn btn-block btn-primary">Gerenciar Tarifas de Categorias</a>
+            <br>
+            <a href="../public/parada-onibus" class="btn btn-block btn-primary">Gerenciar paradas de onibus</a>
+            <br>
+            <a href="../public/forma-pagamento" class="btn btn-block btn-primary">Gerenciar formas de pagamento</a>
+
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-2"></div>
+
+    </div>
+  </div>
