--- a/application/views/scripts/sinistro/index.phtml
+++ b/application/views/scripts/sinistro/index.phtml
@@ -23,7 +23,7 @@
                                     <div style="padding-bottom: 5px">
                                         <input type="text" class="form-control" id="causa" name="causa" placeholder="Causa" >
                                     </div>
-                                    <div class="alert-lt alert-danger causa"  align="center" style="display:none" role="alert">
+                                    <div class="alert-lt alert-danger causa"  align="center" role="alert">
                                         Campo obrigatório
                                     </div>
                                 </div>                                                      
@@ -88,11 +88,11 @@
                                 <div class="col-lg-7">
                                     <label for="descricao" id="label">Descrição</label><label  style="color:red" id="label">*</label>
                                     <div style="padding-bottom: 5px">
-                                        <textarea name="descricao" id="descricao" name="descricao" rows="3" class="form-control" placeholder="Descrição" data-validation-required-message="Somente números."></textarea>
+                                        <textarea id="descricao" name="descricao" rows="3" class="form-control" placeholder="Descrição" data-validation-required-message="Somente números."></textarea>
                                     </div>
                                     <p class="help-block text-danger"></p>
 
-                                    <div class="alert-lt alert-danger descricao hidden"  align="center" style="display:none" role="alert">
+                                    <div class="alert-lt alert-danger descricao hidden"  align="center" role="alert">
                                         Campo obrigatório
                                     </div>
                                 </div>
