--- a/application/views/scripts/linha-dia/index.phtml
+++ b/application/views/scripts/linha-dia/index.phtml
@@ -438,8 +438,8 @@
                 <tr>
                     <th scope="col">Descrição</th>
                     <th scope="col">Origem</th>
-                    <th scope="col">Saída</th> <!-- implementar com moment  -->
-                    <th scope="col">Dia</th>
+                    <th scope="col">Dia</th> <!-- implementar com moment  -->
+                    <th scope="col">Saída</th>
                     <th scope="col">Detalhes</th>
                 </tr>
             </thead>
@@ -448,8 +448,8 @@
                     <tr>
                         <td><?= $linhad['descricao'] ?>    </td>
                         <td>    <?= $linhad['origem'] ?></td>
-                        <td>    <?= $linhad['horario_inicio'] ?></td>
                         <td>    <?= $linhad['dia'] ?></td>
+                        <td>    <?= $linhad['horario_inicio'] ?></td>
                         
 
                         
