Seguros ja cadastrando

--- a/application/views/scripts/seguros/index.phtml
+++ b/application/views/scripts/seguros/index.phtml
@@ -17,14 +17,14 @@
 						<div class="row">
 							<div class="col-lg-6">
 								<label>Número da Apólice<strong title="Campo Obrigatório">*</strong></label>
-								<input type="text" class="form-control" id="numeroParada" name="numeroApolice" placeholder="Informe o numero da apolice" required/>
+								<input type="text" class="form-control" id="numeroApolice" name="numeroApolice" placeholder="Informe o numero da apolice" required/>
 								<div class="alert alert-danger numeroParada" style="display: none;" role="alert">
 									O campo numero de parada é obrigatório!
 								</div>
 							</div>
 							<div class="col-lg-6">
 								<label>Seguradora <strong title="Campo Obrigatório">*</strong></label>
-								<input type="text" class="form-control" id="local" name="seguradora" placeholder="Informe o local da parada" required/>
+								<input type="text" class="form-control" id="seguradora" name="seguradora" placeholder="Informe o local da parada" required/>
 								<div class="alert alert-danger local" style="display: none;" role="alert">
 									O campo local é obrigatório!
 								</div>
@@ -33,49 +33,49 @@
 						<div class="row">
 							<div class="col-lg-6">
 								<label>Nome do Segurado <strong title="Campo Obrigatório">*</strong></label>
-								<input type="text" class="form-control" id="complemento" name="nomeSegurado" placeholder="Informe o complementos, se houver" />
+								<input type="text" class="form-control" id="nomeSegurado" name="nomeSegurado" placeholder="Informe o complementos, se houver" />
 							</div>
 						</div>
 						<div class="row">
 							<div class="col-lg-6">
 								<label>Cpf do Segurado <strong title="Campo Obrigatório">*</strong></label>
-								<input type="text" class="form-control" id="complemento" name="cpfSegurado" placeholder="Informe o complementos, se houver" />
+								<input type="text" class="form-control" id="cpfSegurado" name="cpfSegurado" placeholder="Informe o complementos, se houver" />
 							</div>
 						</div>
 						<div class="row">
 							<div class="col-lg-6">
 								<label>Mensalidade <strong title="Campo Obrigatório">*</strong></label>
-								<input type="text" class="form-control" id="complemento" name="valorMensal" placeholder="Informe o complementos, se houver" />
+								<input type="text" class="form-control" id="valorMensal" name="valorMensal" placeholder="Informe o complementos, se houver" />
 							</div>
 						</div>
 						<div class="row">
 							<div class="col-lg-6">
 								<label>Taxa da Franquia <strong title="Campo Obrigatório">*</strong></label>
-								<input type="text" class="form-control" id="complemento" name="taxaFranquia" placeholder="Informe o complementos, se houver" />
+								<input type="text" class="form-control" id="taxaFranquia" name="taxaFranquia" placeholder="Informe o complementos, se houver" />
 							</div>
 						</div>
 						<div class="row">
 							<div class="col-lg-6">
 								<label>Premio por Morte<strong title="Campo Obrigatório">*</strong></label>
-								<input type="text" class="form-control" id="complemento" name="premioMorte" placeholder="Informe o complementos, se houver" />
+								<input type="text" class="form-control" id="premioMorte" name="premioMorte" placeholder="Informe o complementos, se houver" />
 							</div>
 						</div>
 						<div class="row">
 							<div class="col-lg-6">
 								<label>Premio Invalidez <strong title="Campo Obrigatório">*</strong></label>
-								<input type="text" class="form-control" id="complemento" name="premioInvalidez" placeholder="Informe o complementos, se houver" />
+								<input type="text" class="form-control" id="premioInvalidez" name="premioInvalidez" placeholder="Informe o complementos, se houver" />
 							</div>
 						</div>
 						<div class="row">
 							<div class="col-lg-6">
 								<label>Data Inicial <strong title="Campo Obrigatório">*</strong></label>
-								<input type="text" class="form-control" id="complemento" name="dataInicial" placeholder="Informe o complementos, se houver" />
+								<input type="text" class="form-control" id="dataInicial" name="dataInicial" placeholder="Informe o complementos, se houver" />
 							</div>
 						</div>
 						<div class="row">
 							<div class="col-lg-6">
 								<label>Data Final <strong title="Campo Obrigatório">*</strong></label>
-								<input type="text" class="form-control" id="complemento" name="dataFinal" placeholder="Informe o complementos, se houver" />
+								<input type="text" class="form-control" id="dataFinal" name="dataFinal" placeholder="Informe o complementos, se houver" />
 							</div>
 						</div>
 						<br>
