--- a/application/views/scripts/tarifa/index.phtml
+++ b/application/views/scripts/tarifa/index.phtml
@@ -20,8 +20,8 @@
                                 <form>
                                     <? foreach ($this->listarTrajetos as $trajeto): ?>
                                         <div class="checkbox">
-                                            <label><input type="checkbox" name="<?= $trajeto->getNome() ?>" value="<?= $trajeto->getId_trajeto() ?>" id="myCheck" onclick="selecionarCheckbox(this); return true;">
-                                                <?= $trajeto->getNome() ?>
+                                            <label><input type="checkbox" name="<?= $trajeto->getDescricao() ?>" value="<?= $trajeto->getId_trajeto() ?>" id="myCheck" onclick="selecionarCheckbox(this); return true;">
+                                                <?= $trajeto->getDescricao() ?>
                                             </label>
                                         </div>
 
@@ -56,7 +56,7 @@
                                 </div>    
                             </div>
                             <div style="margin-bottom: 5%;">
-                                <button type="submit" class="btn btn-success btn-block cadastrarTarifa">Pronto</button>
+                                <button type="button" class="btn btn-success btn-block cadastrarTarifa">Pronto</button>
                             </div>
                         </Center>
                     </form>
