--- a/application/views/scripts/sinistro/index.phtml
+++ b/application/views/scripts/sinistro/index.phtml
@@ -36,12 +36,15 @@
                                     <div class="alert-lt alert-danger culpado hidden"  align="center" role="alert">
                                         Campo culpado obrigatório
                                     </div>
-                                </div>                                                      
-
+                                </div>       
+                                
+                                
+                                
                                 <div class="col-lg-4">
                                     <label for="descricao" id="label">Custo</label><label  style="color:red" id="label">*</label>
-                                    <div style="padding-bottom: 5px">
-                                        <input type="text" class="form-control" id="custo" name="custo" placeholder="R$" >
+                                    <div class="input-group-prepend" style="padding-bottom: 5px">
+                                        <span class="input-group-text" id="basic-addon1">R$</span>
+                                        <input type="text" class="form-control" id="custo" name="custo">
                                     </div>
                                     <div class="alert-lt alert-danger custo hidden"  align="center" role="alert">
                                         Campo custo obrigatório
