--- a/application/views/scripts/seguros/editar.phtml
+++ b/application/views/scripts/seguros/editar.phtml
@@ -4,39 +4,99 @@
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb" style="background-color:rgba(0,0,0,0.5);">
                     <li class="breadcrumb-item"><a href="<?= $this->baseUrl("secretario") ?>">Início</a></li>
-                    <li class="breadcrumb-item"><a href="<?= $this->baseUrl("parada-onibus") ?>">Paradas</a></li>
+                    <li class="breadcrumb-item"><a href="<?= $this->baseUrl("seguros") ?>">Seguros</a></li>
                     <li class="breadcrumb-item active" style="color:white;" aria-current="page">Editar</li>
                 </ol>
             </nav>
             <form class="jumbotron" method="post" style="background-color:rgba(0,0,0,0.5); color: white;">
                 <div class="row">
                     <div class="col-lg-6">
-                        <label>Número da Paradas <strong title="Campo Obrigatório">*</strong></label>
-                        <input type="hidden" id="id_parada" name="id_parada" value="<?php echo $this->parada->getId_parada_onibus(); ?>">
-                        <input type="text" class="form-control" onkeyup="somenteNumeros(this);" maxlength="5" id="numeroParada" name="numeroParada" placeholder="Digite o numero da parada" required value="<?php echo $this->parada->getNumeroParada(); ?>">
-                        <div class="alert alert-danger numeroParada" style="display: none;" role="alert">
-                            O campo numero de parada é obrigatório!
+                        <label>Número da Apólice<strong title="Campo Obrigatório">*</strong></label>
+                        <input type="hidden" id="id_seguro" name="id_seguro" value="<?php echo $this->seguros->getId_Seguro(); ?>">
+                        <input type="text" class="form-control" onkeyup="somenteNumeros(this);" maxlength="5" id="numeroApolice" name="numeroApolice" placeholder="Digite o numero da apolice" required value="<?php echo $this->seguros->getNumeroApolice(); ?>">
+                        <div class="alert alert-danger numeroApolice" style="display: none;" role="alert">
+                            O campo numero de apolice é obrigatório!
                         </div>
                     </div>
                     <div class="col-lg-6">
-                        <label>Local <strong title="Campo Obrigatório">*</strong></label>
-                        <input type="text" class="form-control" id="local" name="local" placeholder="Digite o local da parada" required value="<?php echo $this->parada->getLocal(); ?>">
+                        <label>Seguradora<strong title="Campo Obrigatório">*</strong></label>
+                        <input type="hidden" id="id_seguro" name="id_seguro" value="<?php echo $this->seguros->getId_Seguro(); ?>">
+                        <input type="text" class="form-control" onkeyup="somenteNumeros(this);" maxlength="5" id="seguradora" name="seguradora" placeholder="Digite o nome da seguradora" required value="<?php echo $this->seguros->getSeguradora(); ?>">
+                        <div class="alert alert-danger seguradora" style="display: none;" role="alert">
+                            O campo seguradora é obrigatório!
+                        </div>
                     </div>
-                    <div class="alert alert-danger local" style="display: none;" role="alert">
-                        O campo local é obrigatório!
-                    </div>
-                </div>
-                <div class="row">
                     <div class="col-lg-6">
-                        <label>Complementos <strong title="Campo Obrigatório">*</strong></label>
-                        <input type="text" class="form-control" id="complemento" name="complemento" placeholder="Digite o complemento, se houver" value="<?php echo $this->parada->getComplemento(); ?>">
+                        <label>Cpf do Segurado<strong title="Campo Obrigatório">*</strong></label>
+                        <input type="hidden" id="id_seguro" name="id_seguro" value="<?php echo $this->seguros->getId_Seguro(); ?>">
+                        <input type="text" class="form-control" onkeyup="somenteNumeros(this);" maxlength="5" id="CpfSegurado" name="cpfSegurado" placeholder="Digite o cpf do segurado" required value="<?php echo $this->seguros->getCpfSegurado(); ?>">
+                        <div class="alert alert-danger seguradora" style="display: none;" role="alert">
+                            O campo CPF é obrigatório!
+                        </div>
                     </div>
-                </div>
+                    <div class="col-lg-6">
+                        <label>Nome do Segurado<strong title="Campo Obrigatório">*</strong></label>
+                        <input type="hidden" id="id_seguro" name="id_seguro" value="<?php echo $this->seguros->getId_Seguro(); ?>">
+                        <input type="text" class="form-control" onkeyup="somenteNumeros(this);" maxlength="5" id="NomeSegurado" name="nomeSegurado" placeholder="Digite o nome do segurado" required value="<?php echo $this->seguros->getNomeSegurado(); ?>">
+                        <div class="alert alert-danger seguradora" style="display: none;" role="alert">
+                            O campo Nome é obrigatório!
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <label>Mensalidade<strong title="Campo Obrigatório">*</strong></label>
+                        <input type="hidden" id="id_seguro" name="id_seguro" value="<?php echo $this->seguros->getId_Seguro(); ?>">
+                        <input type="text" class="form-control" onkeyup="somenteNumeros(this);" maxlength="5" id="valorMensal" name="valorMensal" placeholder="Digite o valor da mensalidade" required value="<?php echo $this->seguros->getValorMensal(); ?>">
+                        <div class="alert alert-danger seguradora" style="display: none;" role="alert">
+                            O campo Mensalidade é obrigatório!
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <label>Taxa da Franquia<strong title="Campo Obrigatório">*</strong></label>
+                        <input type="hidden" id="id_seguro" name="id_seguro" value="<?php echo $this->seguros->getId_Seguro(); ?>">
+                        <input type="text" class="form-control" onkeyup="somenteNumeros(this);" maxlength="5" id="taxaFranquia" name="tacaFranquia" placeholder="Digite o valor da franquia" required value="<?php echo $this->seguros->getTaxaFranquia(); ?>">
+                        <div class="alert alert-danger seguradora" style="display: none;" role="alert">
+                            O campo Valor da Franquia é obrigatório!
+                        </div>
+                    </div>
+                        <div class="col-lg-6">
+                        <label>Indenização por Invalidez<strong title="Campo Obrigatório">*</strong></label>
+                        <input type="hidden" id="id_seguro" name="id_seguro" value="<?php echo $this->seguros->getId_Seguro(); ?>">
+                        <input type="text" class="form-control" onkeyup="somenteNumeros(this);" maxlength="5" id="premioInvalidez" name="premioInvalidez" placeholder="Digite o valor da Indenização" required value="<?php echo $this->seguros->getPremioInvalidez(); ?>">
+                        <div class="alert alert-danger seguradora" style="display: none;" role="alert">
+                            O campo Indenização por Inalidez é obrigatório!
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <label>Indenização por Morte<strong title="Campo Obrigatório">*</strong></label>
+                        <input type="hidden" id="id_seguro" name="id_seguro" value="<?php echo $this->seguros->getId_Seguro(); ?>">
+                        <input type="text" class="form-control" onkeyup="somenteNumeros(this);" maxlength="5" id="premioMorte" name="premioMorte" placeholder="Digite o valor da Indenização" required value="<?php echo $this->seguros->getPremioMorte(); ?>">
+                        <div class="alert alert-danger seguradora" style="display: none;" role="alert">
+                            O campo Indenização por Inalidez é obrigatório!
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <label>Dia da adesão<strong title="Campo Obrigatório">*</strong></label>
+                        <input type="hidden" id="id_seguro" name="id_seguro" value="<?php echo $this->seguros->getId_Seguro(); ?>">
+                        <input type="text" class="form-control" onkeyup="somenteNumeros(this);" maxlength="5" id="dataInicial" name="dataInicial" placeholder="Digite o dia da adesão" required value="<?php echo $this->seguros->getDataInicial(); ?>">
+                        <div class="alert alert-danger seguradora" style="display: none;" role="alert">
+                            O campo dia da adesão é obrigatório!
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <label>Dia da vencimento<strong title="Campo Obrigatório">*</strong></label>
+                        <input type="hidden" id="id_seguro" name="id_seguro" value="<?php echo $this->seguros->getId_Seguro(); ?>">
+                        <input type="text" class="form-control" onkeyup="somenteNumeros(this);" maxlength="5" id="dataFinal" name="dataFinal" placeholder="Digite o dia do vencimento" required value="<?php echo $this->seguros->getDataFinal(); ?>">
+                        <div class="alert alert-danger seguradora" style="display: none;" role="alert">
+                            O campo dia do vencimento é obrigatório!
+                        </div>
+                    </div>
                 <div class="alert alert-success " style="display: none;" role="alert">
-                    Cadastro de parada realizado com sucesso!
+                    Edição realizada com sucesso!
                 </div>
                 <hr>
-                <button type="button" class="btn btn-primary btn-block editarParada">Confirmar</button>
+            </div>
+            <br>
+                <button type="button" class="btn btn-primary btn-block editarSeguros">Confirmar</button>
             </form>
         </div>
     </div>
